--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <section id="header">
         <nav class="navbar navbar-light" id="navbarResponsive">
             <div class="container-fluid">
-              <a class="navbar-brand animate__animated animate__bounce" href="index.html"><h3>Mfm ItaOluwa Youth Church</h3></a>
+              
+              <a class="navbar-brand animate__animated animate__bounce" href="index.html"><img src="images/mfm youth church_123447.png" style="width:80px; height:fit-content;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
               </button>
@@ -61,8 +62,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <div class="container">
                 <!---boothstrap class-->
                 <div class="site-heading text-center" style="margin-top: 60px;">
-                    <h1 style="color: #fff;">Welcome to MFM ItaOluwa, Youth Church.</h1>
-                    <p style="color: #fff;">Citadel of Victory</p>      
+                    <h1 style="color: #fff;">Welcome to MFM ItaOluwa, Youth Church.</h1>     
                 </div>
             </div>
         </section>
@@ -98,12 +98,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div class="container">
             <div class="row justify-content-center">
               <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="images/blogBannerTwo.jpg" class="card-img-top" alt="...">
+                <div class="card" style="width: auto;">
+                  <img src="images/Praise banner.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
-                    <a href="#" class="btn btn-primary"> Go </a>
+                    <h5 class="card-title">MEGA Praise Programme </h5>
+                    <p class="card-text"> <strong>THEME:</strong> Perpetual Praise  <br> <strong>DATE:</strong> 9TH OF OCTOBER, 2022.</p>
+                    <a href="#" class="btn btn-primary"> join live</a>
                   </div>
                 </div>
               </div>
@@ -229,8 +229,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="images/kindpng_2373746.png" class="footerLogo">
-                    <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing <br> industries for previewing layouts and visual mockups.</p>
+                    <img src="images/mfm youth church_123447.png" class="footerLogo">
+                    <p>Mountain of Fire and Miracles Ministry  <br>Youth Church  <br>15, Samuel Crecent, <br>Orimedu, Ita-Oluwa, <br>Ikorodu, Lagos. <br>DR. D.K. OLUKOYA <br><small> G.O M.F.M Worldwide.</small></p>
                 </div>
                 <div class="col-md-3">
                     <h1>Quick Links</h1>
