--- a/locate.html
+++ b/locate.html
@@ -30,7 +30,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <section id="headerOne">
         <nav class="navbar navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand animate__animated animate__bounce" href="index.html"><h3>Mfm ItaOluwa Youth Church</h3></a>
+              <a class="navbar-brand animate__animated animate__bounce" href="index.html"><img src="images/mfm youth church_123447.png" style="width:80px; height:fit-content;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
               </button>
