--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                   <div class="card-body">
                     <h5 class="card-title">MEGA Praise Programme </h5>
                     <p class="card-text"> <strong>THEME:</strong> Perpetual Praise  <br> <strong>DATE:</strong> 9TH OF OCTOBER, 2022.</p>
-                    <a href="#" class="btn btn-primary"> join live</a>
+                    <a href="#" class="btn btn-primary"> join us live</a>
                   </div>
                 </div>
               </div>
