--- a/blogPostOne.html
+++ b/blogPostOne.html
@@ -235,7 +235,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
           </div>
       </div>
       <hr>
-      <p class="copyRight text-center">Made by Temidire <i class="fa fa-code"></i> </p>
+      <p class="copyRight text-center">Made by <i class="fa fa-code"></i> </p>
   </div>
 </section>
 <!-- end of section -->
