--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 <div class="col-md-3">
                     <h1>Quick Contact</h1>
                     <a href="tell:+2348079322792"> <i class="fa fa-phone"></i> Call for directions</a>
-                    <a href="mailto:mfmitaoluwayouthchurch1@gmail.com"><i class="fa fa-envelope"></i>email</a>
+                    <a href="mailto:mfmitaoluwayouthchurch1@gmail.com subject=subject text">
+                      <i class="fa fa-envelope"></i>Click here to send us an email</a>
                     <a href="locate.html"><p><i class="fa fa-home"></i> Church address</p></a>
                     
                 </div>
