--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 <div class="col-md-3">
                     <h1>Quick Links</h1>
                   <!---<a href="blog.html"><p><i class="fa fa-bookmark"></i>Blog Posts</p></a> -->
-                    <a href="register.html"><p><i class="fa fa-newspaper-o"></i>Subscribe to Newsletters</p></a>
+                    <a href="#"><p><i class="fa fa-newspaper-o"></i>Subscribe to Newsletters</p></a>
                     <a href="support.html"><p><i class="fa fa-credit-card-alt"></i>Support & Donations</p></a>
                     <a href="locate.html"><p><i class="fa fa-map-marker"></i>Locate us on Google map</p></a>
                 </div>
                 <div class="col-md-3">
                     <h1>Quick Contact</h1>
-                    <a href="tell:+2348079322792"> <i class="fa fa-phone"></i> Call for directions</a>
+                    <a href="tel:+2348079322792"> <i class="fa fa-phone"></i> Call for directions</a>
                     <a href="mailto:mfmitaoluwayouthchurch1@gmail.com subject=subject text">
                       <i class="fa fa-envelope"></i>Click here to send us an email</a>
                     <a href="locate.html"><p><i class="fa fa-home"></i> Church address</p></a>
