--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 </div>
                 <div class="col-md-3">
                     <h1>Quick Contact</h1>
-                    <a href="tel:+2348079322792"> <i class="fa fa-phone"></i> Call for directions</a>
+                   
                     <a href="mailto:mfmitaoluwayouthchurch1@gmail.com subject=subject text">
                       <i class="fa fa-envelope"></i>Click here to send us an email</a>
                     <a href="locate.html"><p><i class="fa fa-home"></i> Church address</p></a>
@@ -203,7 +203,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 </div>
             </div>
             <hr>
-            <p class="copyRight text-center">Made by Temidire <i class="fa fa-code"></i> </p>
+            <p class="copyRight text-center">Made by ADESOYE <i class="fa fa-code"></i> For M.F.M Itaoluwa youth church </p>
         </div>
      </section>
      <!-- end of section -->
