--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
                 </div>
                 <div class="col-md-4 middle">
-                    <p class="review">•	To build up heavenly-bound and aggressive Christians. The priority in MFM is for people to make heaven. It is not a worldly Church</p>
-                    <p class="review">•	To build up prayer eagles</p>
-                    <p class="review">• To purify the Pentecostal dirtiness of this age</p>
+                    <p class="review">•	To build up heavenly-bound and aggressive Christians. The priority in MFM is for people to make heaven. It is not a worldly Church.</p>
+                    <p class="review">•	To build up prayer eagles.</p>
+                    <p class="review">• To purify the Pentecostal dirtiness of this age.</p>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                     <p class="review">•	Divine healing as provided by the Lord Jesus Christ.</p>
                     <p class="review">•	The Rapture ushering all believers into the Marriage Supper of the Lamb, and the second advent of the Lord Jesus Christ when He will physically land on the earth.</p>
                     <p class="review">•	The Final Judgment.</p>
-                    <p class="review">•	The New Heaven and Earth</p>
+                    <p class="review">•	The New Heaven and Earth.</p>
                 </div>
             </div>
         </div>
