--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 <!---boothstrap class-->
                 <div class="site-heading text-center" style="margin-top: 60px;">
                     <h1 style="color: #fff;">Welcome to MFM Youth Church, ItaOluwa, Ikorodu.</h1> 
-                    <h2 style="color: #990190; margin-top: 30px; background-color: rgba(0, 0, 0, 0.7);">2022: My year of becoming a divine spectacle. <br> 1 Corinthians 4:9, John 3:8, Job 9:10, Exodus 15:11.</h2>     
+                    <h2 style="color: #990190; margin-top: 30px; ">2022: My year of becoming a divine spectacle. <br> 1 Corinthians 4:9, John 3:8, Job 9:10, Exodus 15:11.</h2>     
 
                 </div>
             </div>
