--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     
     <section id="testimonials">
         <div class="container">
-            <h1 class="text-center">About M.F.M Youth </h1>
+            <h1 class="text-center">About M.F.M Youth Church </h1>
             <p class="text-center" >Our secret is found in our Lord Jesus Christ, from whom this great Vision of repositioning the Youths was birthed through our daddy, the general overseer of MFM worldwide, Dr Daniel Olukoya and his lovely wife, Pastor Sade Olukoya.</p>
             <p class="text-center">This is a Vision to rescue young men and women from the destructive agenda of the devil. To God's glory, the Vision is progressive transforming lives with astonishing testimonies recorded, bringing salvation to the lost souls, and joy over—flow to the hopeless. Thereby, hijacking the Youths from the Clubs to Church, prostitutes to prophets... from darkness to light.</p>
             <p class="text-center">The Vision for the Youth Church which started in the year 2007 has now become a global phenomenon. The G.O of MFM worldwide, Dr DK, OIukoya, initiated a '70—Point Agenda for the fulfillment that Vision. The list comprises items and activities to be carried out to reach young men and women wherever they may be. To disperse this agenda, a ‘platform was needed to help bring these young people together; hence the birth of the Youth Church in the Ministries.</p>
