--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                 </div>
             </div>
             <hr>
-            <p class="copyRight text-center">Made by ADESOYE <i class="fa fa-code"></i> For M.F.M Itaoluwa youth church </p>
+            <p class="copyRight text-center">Made by ADESOYE <i class="fa fa-code"></i> For M.F.M  Youth church, Itaoluwa. </p>
         </div>
      </section>
      <!-- end of section -->
