--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <!-- Services section -->
     <section id="services">
         <div class="container">
-          <h1 class="text-center"> UPCOMING EVENTS.</h1>
+          <h1 class="text-center"> LIVE EVENTS.</h1>
             <div class="row justify-content-center">
               <div class="col-md-4">
                 <div class="card" style="width: auto;">
@@ -157,7 +157,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                   <div class="card-body">
                     <h5 class="card-title">MEGA Praise Programme </h5>
                     <p class="card-text"> <strong>THEME:</strong> Perpetual Praise  <br> <strong>DATE:</strong> 9TH OF OCTOBER, 2022.</p>
-                    <a href="https://forms.gle/Hh8VJmRFJ7om8zbV9" class="btn btn-primary "> Register </a>
+                    <a href="https://m.facebook.com/story.php?story_fbid=666134988143122&id=100009536340736" class="btn btn-primary "> WATCH LIVE </a>
                   </div>
                 </div>
               </div>
